--- a/options/continual_trans/non_pretrained/stage0/cifar100_stage0_deit_APG.yaml
+++ b/options/continual_trans/non_pretrained/stage0/cifar100_stage0_deit_APG.yaml
@@ -1,4 +1,4 @@
-dataset: imagenet100
+dataset: CIFAR100
 
 model: continual_trans
 backbones: SelfPromptDeit_mytiny
@@ -7,7 +7,7 @@ frozen_layer: 9
 reset_deep_layers: True
 force_reset_deep_layers: False
 testing_interval: 10
-batch_size: 256
+batch_size: 128
 
 eval_type: cnn
 memory_size: 0
