--- a/options/continual_trans/pretrained/CIFAR100_pretrained_vitbase_T10.yaml
+++ b/options/continual_trans/pretrained/CIFAR100_pretrained_vitbase_T10.yaml
@@ -1,13 +1,17 @@
-dataset: imagenet100
+dataset: cifar100
 
 model: continual_trans
-backbones: SelfPromptDeit_mytiny
-immediate_layer: 9
-frozen_layer: 9
-reset_deep_layers: True
-force_reset_deep_layers: False
+backbones: SelfPromptDeit_mybase
+pretrain_path: chkpts/pretrained_chkpts/deit_base_patch16_224-b5f2ef4d.pth
+not_need_pretrain: True
+first_pretrain: True
+immediate_layer: 5
+frozen_layer: 11
+reset_deep_layers: False
 testing_interval: 10
-batch_size: 256
+batch_size: 96
+herding_selection:
+    type: icarl
 
 eval_type: cnn
 memory_size: 0
@@ -16,7 +20,9 @@ FC_MLP_num: 0
 fc_proxy_per_class: 10
 cross_attn_wo_x: False
 APG_residual: False
-
+#lr: 0.001
+#warmup_lr: 0.0001
+#warmup_epochs: 5
 groupwise_factors:
     old_weights: 0.
 
@@ -52,7 +58,8 @@ prompt_config:
         p_attn: True
 
     finetune_config:
-        finetune_task: [ 0,1,2,3,4,5,6,7,8,9,10]
+        #        start_epoch:
+        finetune_task: [ 1,2,3,4,5,6,7,8,9,10]
         scale_finetune_epochs: True
         scale_finetune_epochs_per_time: 5
         finetune_whole_fc: True
@@ -77,7 +84,8 @@ parameter_dict:
     cross_entropy_mem: 1
     loss_norm: 0.01
     loss_norm_scale: 100
-    attn_type: hard_ce
+    attn_type: KLDivTripletWithHardCe
+    triplet: 0
 finetune_parameter_dict:
     cross_entropy: 1
 
